# mail

./: README.md
mail-go/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.go
mail-go/internal/helpers/: env.go
mail-go/internal/routes/mail/: mail_route.go
mail-go/internal/services/: mail_service.go
mail-java/: Dockerfile  README.md  application.properties  docker-compose.yml  pom.xml
mail-java/src/main/java/com/example/mailjava/: EmailKeyProperties.java  EmailService.java  MailJavaApplication.java  MessageRQ.java  SendEmailController.java
mail-java/src/main/resources/: application.properties
mail-java/src/test/java/com/example/mailjava/: SendEmailControllerTest.java
mail-rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
mail-rust/mail/: Cargo.toml
mail-rust/mail/src/: main.rs
mail-rust/mail/src/routes/mail/: mail_route.rs  mod.rs
mail-rust/mail/src/services/: mail_service.rs
