[package]
name = "mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.11.3"
log = "0.4.21"
dotenv = "0.15.0"
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
lettre = "0.11.7"
lettre_email = "0.9.4"
